Fix spacing in fieldset

--- a/packages/block-library/fieldset/style.scss
+++ b/packages/block-library/fieldset/style.scss
@@ -19,8 +19,7 @@
 		display: contents;
 	}
 
-	.block-editor-block-list__layout > .wp-block-omniform-field:first-child,
-	&.is-layout-flow > .omniform-field-label + .wp-block-omniform-field {
-		margin-block-start: 0.5em !important;
+	> .omniform-field-label + div {
+		margin-top: 0.5em;
 	}
 }
